[gd_scene load_steps=3 format=3 uid="uid://bhdkvxfhddcty"]

[ext_resource type="Script" uid="uid://bq02dfrlgtnkw" path="res://Scenes/Play/PlayerStatsMenu.gd" id="1_8k2xl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="PlayerStatsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8k2xl")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="ContentContainer" type="HBoxContainer" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="VBoxContainer" parent="BackgroundPanel/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerPicture" type="TextureRect" parent="BackgroundPanel/ContentContainer/LeftPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 0
expand_mode = 1
stretch_mode = 5

[node name="StatsContainer" type="VBoxContainer" parent="BackgroundPanel/ContentContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="RightPanel" type="VBoxContainer" parent="BackgroundPanel/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BuffsContainer" type="VBoxContainer" parent="BackgroundPanel/ContentContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Close"
